[package]
name = "multi-venue-trading-engine-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Production-grade multi-venue crypto market making engine"
license = "MIT OR Apache-2.0"

[dependencies]
# ====================== Core Async & Runtime ======================
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# ====================== Networking ======================
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }
hyper = { version = "1.0", features = ["full"] }

# ====================== Web Framework (Dashboard) ======================
axum = { version = "0.7", features = ["ws", "json", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.6", features = [
    "trace", "cors", "limit", "timeout", "compression-full"
] }

# ====================== Serialization ======================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# ====================== Logging & Observability ======================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"

# ====================== Metrics (Prometheus) ======================
prometheus = "0.13"
prometheus-client = "0.22"
axum-prometheus = "0.7"

# ====================== Configuration & Utils ======================
config = { version = "0.14", features = ["yaml", "toml", ] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# ====================== Performance & Data Structures ======================
dashmap = "6.0"                    # Fast concurrent HashMap
crossbeam-channel = "0.5"
parking_lot = "0.12"               # Faster than std Mutex
bytes = "1.0"
smallvec = "1.13"

# ====================== Error Handling ======================
thiserror = "2.0"
anyhow = "1.0"

# ====================== Testing ======================
[dev-dependencies]
wiremock = "0.6"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# [[bench]]
# name = "orderbook"
# harness = false