[package]
name = "multi-venue-trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full", "macros"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = "0.4"
url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"